--- a/movies/styles/main.css
+++ b/movies/styles/main.css
@@ -19,6 +19,7 @@ h1, #header-logo {
     font-family: "Protest Strike", sans-serif;
     font-weight: 400;
     font-style: normal;
+    margin: 0;
 }
 header {
     display: flex;
@@ -63,6 +64,7 @@ header {
     background-color: var(--blue-color);
     border-radius: 8px;
     background-size: cover;
+    background-position: center;
 }
 #content-main-banner h1 {
     display: inline-block;
@@ -165,13 +167,82 @@ header {
     &:after {  
       transform: rotate(35deg);
     }
-  }
+}
 
-  .movie-card-rating {
+.movie-card-rating {
     color: var(--sky-color);
     font-size: 12px;
     text-shadow: var(--dark) 0px 0 2px;
-  }
+}
+
+
+
+.dark-screen {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: var(--dark);
+    opacity: 0.5;
+}
+.modal {
+    position: fixed;
+    width: calc(100% - 256px);
+    /*height: calc(100% - 256px);*/
+    top: 64px;
+    left: 64px;
+    background-color: var(--primary-color);
+    border-radius: 8px;
+    background-size: cover;
+    background-position: center;
+    color: var(--white);
+    padding: 64px;
+}
+.modal-information {
+    font-size: 12px;
+    margin-bottom: 4px;
+    color: var(--secondary-color);
+}
+
+.modal-genres {
+    margin-bottom: 16px;
+    display: flex;
+    gap: 16px;
+    font-size: 12px;
+    color: var(--blue-color);
+}
+
+.modal-list-watch-providers {
+    margin-top: 12px;
+    display: flex;
+    gap: 16px;
+    font-size: 12px;
+    color: var(--blue-color);
+}
+.modal-list-watch-provider-category {
+    color: var(--red-color);
+}
+
+.modal-filter-section {
+    margin-top: 32px;
+}
+.modal-filter-section select {
+    background: var(--primary-color);
+    color: var(--white);
+    border: none;
+    padding: 4px 8px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.modal-filter-section select:hover {
+    background: var(--secondary-color);
+}
+.modal-filter-section select option {
+    background: var(--primary-color);
+    color: var(--white);
+    text-shadow: 0 1px 0 var(--dark);
+}
 
 
 
@@ -181,4 +252,5 @@ footer {
     padding: 0 64px;
     font-size: 14px;
     text-align: right;
+    color: var(--blue-color);
 }
